--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,87 @@
-body {
+html,body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+h1{
+  font-size: 30px;
+}
+h2{
+  font-size: 20px;
+}
+
+.logo {
+  position: absolute;
+  padding-top: 10px;
+  padding-left: 30px;
+
+}
+
+
+.resume{
+  background-color: #f5f5f5;
+}
+
+.resume_ex{
+  margin: 30px;
+}
+
+.modalBackground {
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto;
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modalContainer {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%; /* Could be more or less, depending on screen size */
+}
+
+
+form {
+  margin: 10px auto;
+  padding-bottom: 30px;
+  width: 50%;
+}
+
+table tbody tr:nth-child(odd) {
+  background-color: #ffffff; 
+}
+
+#resetStart{
+  padding : 20px;
+}
+
+.timer {
+  font-size: 20px;
+}
+
+.timer .temps{
+  font-size: 100px;
+  color: #4db6ac;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.progress{
+  width : 50%;
+  height: 20px;
+  margin : auto;
+}
+
+.card-content{
+  height: 250px;
 }
