--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,11 @@ h2{
   margin: 30px;
 }
 
+.resume_ex_training{
+  font-size: 12px;
+  margin: 30px;
+}
+
 .modalBackground {
   display: block;
   position: fixed;
@@ -70,7 +75,7 @@ table tbody tr:nth-child(odd) {
 }
 
 .timer .temps{
-  font-size: 100px;
+  font-size: 80px;
   color: #4db6ac;
   margin-top: 5px;
   margin-bottom: 5px;
@@ -82,6 +87,22 @@ table tbody tr:nth-child(odd) {
   margin : auto;
 }
 
+.card-title{
+  margin-right: 100px;
+  margin-left: 10px;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.card-image{
+  margin: auto;
+}
+
 .card-content{
-  height: 250px;
+  text-align: left, justify;
+  width: 800px;
+}
+
+.card-action{
+  margin: auto;
 }
